--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -245,24 +245,24 @@
                                                         </button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        <form name="Withdrawal">
+                                                        <form>
                                                             <div class="mb-3">
-                                                                <label for="withdrawal" class="col-form-label">
-                                                                    Are you sure you want to unsubscribe?</label>
+                                                                <label for="withdrawal" class="col-form-label">Enter Password</label>
+                                                                <input type="password" class="form-control"
+                                                                       id="withdrawal" autocomplete="off"
+                                                                       style="border-color: rgb(141, 140, 140);"
+                                                                       required>
                                                             </div>
                                                         </form>
                                                     </div>
                                                     <div class="modal-footer">
-                                                        <button type="button" class="btn btn-sm btn-primary ml-auto"
-                                                                data-dismiss="modal">
-                                                            No.
+                                                        <button type="submit" class="btn btn-sm btn-secondary"
+                                                                id="delete">
+                                                            Withdrawal
                                                         </button>
-                                                        <form id="withdrawal">
-                                                            <button type="submit" class="btn btn-sm btn-secondary"
-                                                                    id="delete">
-                                                                Yes, I will unsubscribe.
-                                                            </button>
-                                                        </form>
+                                                        <button type="button" class="btn btn-link text-danger ml-auto"
+                                                                data-dismiss="modal" id="reset2">Close
+                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
