--- a/topicsation_class/src/public/views/classroom.mustache
+++ b/topicsation_class/src/public/views/classroom.mustache
@@ -83,7 +83,7 @@
               <span id="minutes"></span>
               <span id="seconds"></span>
             </div>
-            <a href="http://localhost:8081/main"
+            <a href="http://49.50.162.92:80/main"
               ><button
                 type="button"
                 id="classroom-out"
