리뷰창 튜티만 뜨게 수정

--- a/topicsation_class/src/public/views/classroom.mustache
+++ b/topicsation_class/src/public/views/classroom.mustache
@@ -24,12 +24,13 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/news.js"></script>
-    <script src="/js/timer.js"></script>
+
     <script src="/js/zoom.js"></script>
     <script src="/js/chat.js"></script>
 
     <script>window.token = '{{ $token }}';</script>
     <script type="module" src="/js/check.js"></script>
+    <script type="module" src="/js/timer.js"></script>
     <style>
       html,
       body {
