--- a/src/main/resources/templates/html/Tutor-Detail-View.html
+++ b/src/main/resources/templates/html/Tutor-Detail-View.html
@@ -519,7 +519,7 @@
                   height: 20px;
                   width: 200px;
                   color: RGB(207, 209, 218);
-                "><a href="#">개인정보처리방침</a></span>
+                "><a href="https://fortunate-jitterbug-838.notion.site/160876db65df40979b37edb109a9694e">개인정보처리방침</a></span>
                 </li>
                 <li>
             <span style="
@@ -535,7 +535,7 @@
                   height: 20px;
                   width: 200px;
                   color: RGB(207, 209, 218);
-                "><a href="#">이용약관</a></span>
+                "><a href="https://fortunate-jitterbug-838.notion.site/92a7e1d4d2e642fc9cbeac5c5ebcb4c2">이용약관</a></span>
                 </li>
                 <li>
             <span style="
@@ -543,7 +543,7 @@
                   height: 20px;
                   width: 200px;
                   color: RGB(207, 209, 218);
-                "><a href="#">광고상표소개</a></span>
+                "><a href="https://fortunate-jitterbug-838.notion.site/cbbd0eb370cd435d84b23c30140f22d7">광고상표소개</a></span>
                 </li>
             </ul>
         </div>
