--- a/src/main/resources/templates/html/main-search.html
+++ b/src/main/resources/templates/html/main-search.html
@@ -186,13 +186,13 @@
         <div class="text-center">
             <ul>
                 <li><span style="display:inline-block; height:20px; width:200px; color: RGB(207, 209, 218);"><a
-                        href="#">개인정보처리방침</a></span></li>
+                        href="https://fortunate-jitterbug-838.notion.site/160876db65df40979b37edb109a9694e">개인정보처리방침</a></span></li>
                 <li><span style="display:inline-block; height:20px; width:200px; color: RGB(207, 209, 218);"><a
                         href="#">서비스소개</a></span></li>
                 <li><span style="display:inline-block; height:20px; width:200px; color: RGB(207, 209, 218);"><a
-                        href="#">이용약관</a></span></li>
+                        href="https://fortunate-jitterbug-838.notion.site/92a7e1d4d2e642fc9cbeac5c5ebcb4c2">이용약관</a></span></li>
                 <li><span style="display:inline-block; height:20px; width:200px; color: RGB(207, 209, 218);"><a
-                        href="#">광고상표소개</a></span></li>
+                        href="https://fortunate-jitterbug-838.notion.site/cbbd0eb370cd435d84b23c30140f22d7">광고상표소개</a></span></li>
             </ul>
         </div>
         <hr class="my-3 my-lg-2">
